--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
         "tailwindcss": "^3.2.1",
         "vite": "^5.0",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "datatables.net": "^2.0.6",
+        "datatables.net-responsive": "^3.0.2",
+        "datatables.net-select": "^2.0.2",
+        "datatables.net-vue3": "^3.0.1",
+        "oh-vue-icons": "^1.0.0-rc3"
     }
 }
