--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^5.0.0",
         "autoprefixer": "^10.4.12",
-        "axios": "^1.6.4",
+        "axios": "^1.6.0",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
@@ -19,11 +19,13 @@
     },
     "dependencies": {
         "@formkit/tempo": "^0.1.1",
+        "@headlessui/vue": "^1.7.22",
         "@popperjs/core": "^2.11.8",
         "chart.js": "^4.4.2",
         "oh-vue-icons": "^1.0.0-rc3",
         "vue-chartjs": "^5.3.1",
         "vue3-google-map": "^0.20.0",
-        "vue3-popper": "^1.5.0"
+        "vue3-popper": "^1.5.0",
+        "vue3-toastify": "^0.2.1"
     }
 }
