--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "@headlessui/vue": "^1.7.22",
         "@popperjs/core": "^2.11.8",
         "chart.js": "^4.4.3",
+        "flowbite": "^2.3.0",
+        "flowbite-vue": "^0.1.5",
         "gooddialogs": "^0.4.4",
         "oh-vue-icons": "^1.0.0-rc3",
         "vue-chartjs": "^5.3.1",
